Remove background img tag and clean up

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-title" content="Ore's Glow">
     <link rel="manifest" href="/site.webmanifest">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img src="/assets/oresglow-logo.png" alt="Ore's Glow Logo" class="logo">
+        <img src="assets/oresglow-logo.png" alt="Ore's Glow Logo" class="logo">
         <h1>Welcome to Ore's Glow</h1>
     </header>
     <main>
         <section>
             <h2>Glow With Us</h2>
             <p>Discover our exclusive line of skincare products designed for a luminous, healthy glow.</p>
-            <img src="/assets/soft-brown-cream.gif" alt="Cream Background" class="background-image">
+            <img src="assets/soft-brown-cream.gif" alt="Cream Background" class="background-image">
         </section>
     </main>
     <footer>
