Add MailerLite script and update logo hover effect

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
     <meta name="apple-mobile-web-app-title" content="Ore's Glow">
     <link rel="manifest" href="/site.webmanifest">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+  
 </head>
 <body>
     <header>
@@ -23,11 +24,20 @@
         <section>
             <h2>Glow With Us</h2>
             <p>Discover our exclusive line of skincare products designed for a luminous, healthy glow.</p>
-            <img src="assets/soft-brown-cream.gif" alt="Cream Background" class="background-image">
+
         </section>
     </main>
     <footer>
         <p>&copy; 2025 Ore's Glow. All rights reserved.</p>
     </footer>
+    <!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '1489480');
+</script>
+<!-- End MailerLite Universal -->
 </body>
 </html>
