Align logo left, center title, adjust header layout

--- a/index.html
+++ b/index.html
@@ -25,9 +25,16 @@
 </head>
 <body>
     <header>
-        <img id="logo" src="assets/oresglow-logo.png" alt="Ore's Glow Logo" class="logo">
-        <h1>Welcome to Ore's Glow</h1>
+        <div class="logo-container">
+            <a href="https://oresglow.com">
+                <img id="logo" src="assets/oresglow-logo.png" alt="Ore's Glow Logo">
+            </a>
+        </div>
+        <div class="title-container">
+            <h1>Welcome to Ore's Glow</h1>
+        </div>
     </header>
+    
     <main>
         <section>
             <h2>Glow With Us</h2>
